driver + listeners + screenshots - part 1

--- a/src/main/resources/BasicSettings.yaml
+++ b/src/main/resources/BasicSettings.yaml
@@ -1,16 +1,15 @@
 # ENV1 / ENV2
 environment: ENV1
 
-# web / api / mobile
+# web / mobile / api
 framework: web
 
 web:
   grid: false
   debug: false
   headless: false
-  translationTest: false
-api:
-  debug: false
 mobile:
   system: ios
+  debug: false
+api:
   debug: false
