--- a/src/main/resources/settings/ENV2Settings.yaml
+++ b/src/main/resources/settings/ENV2Settings.yaml
@@ -1,4 +1,4 @@
 web_url: https://phptravels.net/
-api_url: https://practice.expandtesting.com/notes/api
+api_url: https://petstore.swagger.io/v2
 android_path: x
 ios_path: x
