--- a/.github/workflows/api-tests-1.yml
+++ b/.github/workflows/api-tests-1.yml
@@ -1,33 +1,70 @@
-name: API tests with Allure action
+name: API tests
 
 on:
+  push:
+    branches:
+      - main
+      - issue-*
+
+  pull_request_target:
+    branches:
+      - main
+      - issue-*
+
   workflow_dispatch:
   schedule:
     - cron: '0 6 * * 1'   # 07:00 PL
 
+permissions:
+  contents: write
+
 jobs:
-  api-tests-1:
+  build:
+    name: Build and test
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@v6
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
         with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
+         java-version: '21'
+         distribution: 'temurin'
+         cache: maven
 
       - name: Run API tests
         run: |
           mvn -pl java-selenium-test-automation-framework test \
             -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/api/PET_STORE.xml \
             -Denvironment=ENV1 -Dplatform=api -Dapi.debug=false
-
-      - name: Generate and publish Allure report
-        uses: allure-framework/github-action@v3
+      
+      - name: Test Report
+        uses: dorny/test-reporter@v2
+        if: always()
         with:
-          results-directories: java-selenium-test-automation-framework/allure-results
+          name: Test Results
+          path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml
+
+      - name: Get Allure history
+        uses: actions/checkout@v6
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: target/allure-results
+          allure_history: allure-history
+          keep_reports: 20
+
+      - name: Deploy report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          report-name: api-1
-          publish-html: true
+          report-name: gh-pages
+          publish-html: allure-history
