--- a/.github/workflows/ui-tests-2.yml
+++ b/.github/workflows/ui-tests-2.yml
@@ -1,11 +1,10 @@
-name: UI tests (Playwright framework)
+name: UI Tests (Playwright framework)
 
 on:
   push:
     branches:
       - main
       - issue-*
-
   workflow_dispatch:
   schedule:
     - cron: '0 7 * * 1'   # 08:00 PL
@@ -14,11 +13,11 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  ui-tests-2:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up JDK 21
@@ -30,31 +29,15 @@ jobs:
 
       - name: Run UI tests
         run: |
-         mvn -pl java-playwright-test-automation-framework test \
-         -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/web/PHP_TRAVELS.xml \
-         -Denvironment=ENV1 -Dplatform=web -Dweb.engine=firefox -Dweb.remote=false -Dweb.debug=false -Dweb.headless=true
+          mvn -pl java-playwright-test-automation-framework test \
+            -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/web/PHP_TRAVELS.xml \
+            -Denvironment=ENV1 -Dplatform=web \
+            -Dweb.engine=firefox -Dweb.remote=false \
+            -Dweb.debug=false -Dweb.headless=true
 
-      - name: Checkout gh-pages (history)
+      - name: Upload Allure results
         if: always()
-        uses: actions/checkout@v4
+        uses: actions/upload-artifact@v4
         with:
-          ref: gh-pages
-          path: gh-pages
-        continue-on-error: true
-
-      - name: Generate Allure report
-        if: always()
-        uses: simple-elf/allure-report-action@master
-        with:
-          allure_results: java-selenium-test-automation-framework/allure-results
-          gh_pages: gh-pages/api-tests-1
-          allure_history: allure-history/api-tests-1
-          keep_reports: 10
-
-      - name: Deploy report to GitHub Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: gh-pages
+          name: allure-results-ui-2
+          path: java-playwright-test-automation-framework/allure-results
