--- a/.github/workflows/api-tests-1.yml
+++ b/.github/workflows/api-tests-1.yml
@@ -1,4 +1,4 @@
-name: API Tests 1
+name: API tests (Selenium framework)
 
 on:
   workflow_dispatch:
@@ -33,15 +33,9 @@ jobs:
             -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/api/PET_STORE.xml \
             -Denvironment=ENV1 -Dplatform=api -Dapi.debug=false
 
-      - name: Generate Allure report
-        run: |
-          mkdir -p allure-history/api-tests-1
-          mvn allure:report -pl java-selenium-test-automation-framework
-          cp -r java-selenium-test-automation-framework/target/site/allure-maven-plugin/* allure-history/api-tests-1/
-
-      - name: Deploy report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload Allure results
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history/api-tests-1
+          name: allure-results-api-1
+          path: java-selenium-test-automation-framework/allure-results
