--- a/java-appium-desktop-test-automation-framework/src/main/resources/settings/ENV2Settings.yaml
+++ b/java-appium-desktop-test-automation-framework/src/main/resources/settings/ENV2Settings.yaml
@@ -1,6 +1,4 @@
-web_url: https://phptravels.net/
-api_url: https://petstore.swagger.io/v2
-android_path: src/main/resources/mobileApp/app-alpha-universal-release.apk
-ios_path: x
-application_package: org.wikipedia.alpha
-application_activity: org.wikipedia.main.MainActivity
+application_name_pages: Pages Creator Studio
+application_name_numbers: Numbers Creator Studio
+bundle_id_pages: com.apple.Pages
+bundle_id_numbers: com.apple.Numbers
