ts pw set up - part 4

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 /java-selenium-test-automation-framework/allure-results
 /java-playwright-test-automation-framework/allure-results
 /java-desktop-macos-test-automation-framework/allure-results/
+/ts-playwright-test-automation-framework/test-results/
+
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
