--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^25.2.3"
   },
   "dependencies": {
+    "js-yaml": "^4.1.1",
     "playwright": "^1.58.2",
     "winston": "^3.19.0"
   }
